@@ -15,6 +15,11 @@ checkbox (0.16.1) UNRELEASED; urgency=low
     using and set video type and plugin accordingly. (LP: #1100594)
   * scripts/network_check: added ability to specify custom target URL for
     debugging failures (LP: #1128017)
+  * scripts/removable_storage_test: Added error handling to trap OSError on
+    non-writable media and modified output to handle subsequent
+    ZeroDivisionError issues when summarizing test results.
+    jobs/media.txt.in: Modified instructions for SD/SDHC to specify using
+    UNLOCKED cards to avoid issues when testing read-only media (LP: #11118780)
 
   [ Sylvain Pineau ]
   * jobs/suspend.txt.in, scripts/gpu_test: Remove the need of running the script
